Fix for navigation when at mobile - the pull icon was covering the top nav item so added padding to fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -319,6 +319,9 @@ pre {
 }
 
 .widget.extendednavigation ul {
+	@media @mobile {
+		padding-top: 70px;
+	}
 	li {
 		@media @tablet {
 			border-bottom: 1px solid darken(@color-swatch1, 10%);
